--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
   </head>
   <body>
     <div class="box">
-      <div class="form"></div>
+      <div class="form">
+        <h2>Sign in</h2>
+        <div class="inputBox">
+          <input type="text" required />
+          <span>Username</span>
+          <i></i>
+        </div>
+        <div class="inputBox">
+          <input type="text" required />
+          <span>Password</span>
+          <i></i>
+        </div>
+        <div class="links">
+          <a href="#">Forgot Password</a>
+          <a href="#">Signup</a>
+        </div>
+        <input type="submit" value="Login" />
+      </div>
     </div>
   </body>
 </html>
